--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -308,10 +308,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="site-copy col-sm-7">
-					<p>&copy; 2017 Industrial Company <span class="sep"> . </span> Licensed NI099999<span class="sep"> . </span> <a href="#">Terms and Condition</a></p>
+					<p>&copy; 2020 Gegson Nigeria Ltd <span class="sep"> </span> 
+
 				</div>
 				<div class="site-by col-sm-5 al-right">
-					<p>Template Made by <a href="http://softnio.com/" target="_blank">Softnio.</a></p>
+					<span class="sep">  </span> <a href="#">Terms and Condition</a></p>
 				</div>
  				
 			</div>
