--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -119,7 +119,7 @@
 							<p>You'll hear from us within one 
 								business day to work out a time to talk through your
 								 business needs. </p>
-							<form id="quote-request" class="form-quote" action="form/quote-request.php" method="post">
+							<form id="quote-request" class="form-quote" action="./get_quote.php" method="post">
 								<div class="form-group row">
 									<div class="form-field col-md-6 form-m-bttm">
 										<input name="quote-request-name" type="text" placeholder="Name *" class="form-control required">
